--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@nestjs/common": "^5.0.0",
     "@nestjs/core": "^5.0.0",
     "fastify-formbody": "^2.0.0",
+    "firebase": "^5.2.0",
+    "firebase-admin": "^5.12.1",
+    "firebase-functions": "^1.1.0",
     "guid-typescript": "^1.0.7",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.0.0",
